# cerebellum

./: .gitignore  LICENSE  README.md  llms.txt  pyproject.toml  run_overnight.sh  run_phase2.sh
cerebellum-qwen35-9b/: ablation_results_heretic.json
docs/: benchmark_protocol.md  cerebellum_memory_controller.md  cli_reference.md  getting_started.md  heretic_chat_template_steering_negative_result.md  heretic_precision_demote_negative_result.md  heretic_prefill_attack_positive_result.md  llama_cpp_tensor_backend_patch.md  mamba_hybrid_findings.md  public_release_scope.md
osmosis/: __init__.py  ab_test.py  budget.py  cerebellum.py  cli.py  gguf_reader.py  gguf_writer.py  imatrix_gen.py  imatrix_stream.py  loader.py  micro_quant.py  micro_quantizer.py  pipeline.py  refusal_direction.py  (+6 more)
osmosis-gemma4-26b/: CARL_RUNTIME_NOTES.md
osmosis-gemma4-e4b/: README-v2.md  README.md  cerebellum_v2b_overrides.txt
osmosis-qwen3.5-9b/: ab_results.json  sensitivity_checkpoint.json  sensitivity_multi.json  sensitivity_report.json  targeted_lora_config.json  tensor_types.txt  tensor_types_aggressive.txt  tensor_types_budget4gb.txt  tensor_types_multidepth_4gb.txt  tensor_types_staggered.txt  tensor_types_thinking_4gb.txt  training_data_wikitext_256.json
osmosis-qwen35-9b/: ablation_results.json  cerebellum_scan_9b.sh  tensor_types_promote_only.txt
osmosis-qwen36-27b/: ablation_plan.json  ablation_results.json  interaction_results.json  refusal_direction_0.6B.json  refusal_direction_0.6B.npz  refusal_test_1777480791.json  refusal_test_1777483464.json  refusal_test_1777484021.json  tensor_types_v3_14.0gb.txt  tensor_types_v3_8.0gb.txt  tensor_types_v3b_10.7gb.txt  tensor_types_v4_12gb.txt
(+200 files in other folders)
