[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "osmosis"
version = "0.1.0"
description = "Model Osmosis — push a model through a membrane, only the signal survives"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1",
    "transformers>=4.40",
    "safetensors",
    "datasets",
    "numpy",
    "tqdm",
    "pyyaml",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.scripts]
osmosis = "osmosis.cli:main"
