[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "osmosis"
version = "0.2.0"
description = "Fast imatrix generation for llama.cpp quantization — compute weight sensitivity in seconds, not hours"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
dependencies = [
    "torch>=2.1",
    "transformers>=4.40",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[tool.setuptools.packages.find]
include = ["osmosis*"]
